--- a/Tugas Android/app/src/main/res/layout/activity_detail.xml
+++ b/Tugas Android/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailActivity">
+    android:padding="16dp"
+    tools:context=".ui.DetailActivity">
 
     <ImageView
         android:id="@+id/iv_avatar"
@@ -31,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:text="Username"
+        tools:text="Username"
         android:textSize="20sp"
         app:layout_constraintLeft_toRightOf="@id/iv_avatar"
         app:layout_constraintTop_toBottomOf="@id/tv_login"/>
